--- a/Publications.html
+++ b/Publications.html
@@ -24,6 +24,13 @@
 <h1>Research Papers </h1>
 </div>
 <ol>
+<li><p>M. Lam, J. Johnson, W. Xiong, K. Maeng, U. Gupta, <b>Y. Li</b>, L. Lai, I. Leontiadis, M. Rhu, H. S. Lee, V. J. Reddi, G.-Y. Wei, D. Brooks, E. Suh.
+<br>"<a >GPU-based Private Information Retrieval for On-Device Machine Learning Inference</a>".
+<br>Under review at a conference, 2023.
+</p>
+<p>
+&nbsp
+</p>
 <li><p>D. Le, F. Seide, Y. Wang, <b>Y. Li</b>, K. Schubert, O. Kalinli, and M. L. Seltzer.
 	<br>"<a href="https://arxiv.org/pdf/2211.00896.pdf">Factorized Blank Thresholding for Improved Runtime Efficiency of Neural Transducers</a>".
 	<br><i>IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2023.
