--- a/Publications.html
+++ b/Publications.html
@@ -21,13 +21,12 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Research Papers </h1>
+<h1>Publications </h1>
 </div>
 <ol>
-<li><p>M. Lam, J. Johnson, W. Xiong, K. Maeng, U. Gupta, <b>Y. Li</b>, L. Lai, I. Leontiadis, M. Rhu, H. S. Lee, V. J. Reddi, G.-Y. Wei, D. Brooks, E. Suh.
-<br>"<a >GPU-based Private Information Retrieval for On-Device Machine Learning Inference</a>".
+<li>M. Lam, J. Johnson, W. Xiong, K. Maeng, U. Gupta, <b>Y. Li</b>, L. Lai, I. Leontiadis, M. Rhu, H. S. Lee, V. J. Reddi, G.-Y. Wei, D. Brooks, E. Suh.
+<br>"GPU-based Private Information Retrieval for On-Device Machine Learning Inference".
 <br>Under review at a conference, 2023.
-</p>
 <p>
 &nbsp
 </p>
@@ -41,7 +40,6 @@
 <li>T. Shen, <b>Y. Li</b>, and J. M. F. Moura.
 	<br>"Forecasting COVID-19 Dynamics: Clustering, Generalized Spatiotemporal Attention, and Impacts of Mobility and Geographic Proximity".
 <br><i>IEEE International Conference on Data Engineering</i> (ICDE), 2023.
-</p>
 <p>
 &nbsp
 </p>
