--- a/Publications.html
+++ b/Publications.html
@@ -39,7 +39,7 @@
 </p>
 <li>T. Shen, <b>Y. Li</b>, and J. M. F. Moura.
 	<br>"Forecasting COVID-19 Dynamics: Clustering, Generalized Spatiotemporal Attention, and Impacts of Mobility and Geographic Proximity".
-<br><i>IEEE International Conference on Data Engineering</i> (ICDE), 2023.
+<br><i>IEEE International Conference on Data Engineering</i> (ICDE), 2023 (acceptance rate: 31%).
 <p>
 &nbsp
 </p>
