--- a/Work.html
+++ b/Work.html
@@ -24,7 +24,8 @@
 </div>
 <ul>
 <li><p><b>Meta</b></p>
-<p>Research Scientist, 04/2022 - Present<p>
+<p>Senior Research Scientist, 08/2023 - Present<p>
+<p>Research Scientist, 04/2022 - 08/2023<p>
 <p>
 &nbsp
 </p>
