--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p></p>
 <table class="imgtable"><tbody><tr><td>
 <img src="./YangLi_files/bio.jpg" alt="alt text" width="187px" height="199px"></a>&nbsp;</td>
-			<td align="left"><p>I am a research scientist at Meta. Before that, I was a researcher at Microsoft. I received PhD and MS degrees from Carnegie Mellon University (advisor: <a href="https://www.ece.cmu.edu/directory/bios/moura-jose.html">Prof. José M. F. Moura</a>, member of the National Academy of Engineering), an MSE degree from the University of Texas at Austin, and a BE degree from Tsinghua University. My research interests span computer architecture and systems, machine learning, and their intersection. I am a recipient of the IBM Patent Application Award.</p>
+			<td align="left"><p>I am a senior research scientist at Meta. Before that, I was a researcher at Microsoft. I received PhD and MS degrees from Carnegie Mellon University (advisor: <a href="https://www.ece.cmu.edu/directory/bios/moura-jose.html">Prof. José M. F. Moura</a>, member of the National Academy of Engineering), an MSE degree from the University of Texas at Austin, and a BE degree from Tsinghua University. My research interests span machine learning, computer architecture and systems, and their intersection. I am a recipient of the IBM Patent Application Award.</p>
 
 </p><p>
 
@@ -38,7 +38,9 @@
 
 <h2>Research Topics</h2>
 <ul>
-<li><p>Cache, memory, and power management for cloud infrastructures</p></li>
+<li><p>Algorithm- and computer system-level optimizations for large language models (LLM)
+<li><p>Model-System co-design for on-device AI
 <li><p>Deep learning models for spatial- and time-dependent data</p></li>
-<li><p>Computer architecture and systems for large-scale AI and on-device AI</p></li>
+<li><p>Cache, memory, and power management for cloud infrastructures</p></li>
+
 </ul>
