--- a/Publications.html
+++ b/Publications.html
@@ -13,7 +13,7 @@
 <div class="menu-category">Menu</div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/index.html" class="current">About&nbsp;me</a></div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/Education.html">Education</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Work.html">Professional Experience</a></div>
+<div class="menu-item"><a href="https://jerryyangli.github.io/Work.html">Work Experience</a></div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/Publications.html">Publications</a></div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/Patents.html">Patents</a></div>
 <div class="menu-item"><a href="https://jerryyangli.github.io/Teaching.html">Teaching</a></div>
@@ -38,7 +38,7 @@
 &nbsp
 </p>
 <li>T. Shen, <b>Y. Li</b>, and J. M. F. Moura.
-	<br>"Forecasting COVID-19 Dynamics: Clustering, Generalized Spatiotemporal Attention, and Impacts of Mobility and Geographic Proximity".
+	<br><a href="https://ieeexplore.ieee.org/document/10184813">Forecasting COVID-19 Dynamics: Clustering, Generalized Spatiotemporal Attention, and Impacts of Mobility and Geographic Proximity".
 <br><i>IEEE International Conference on Data Engineering</i> (ICDE), 2023 (acceptance rate: 31%).
 <p>
 &nbsp
