--- a/Work.html
+++ b/Work.html
@@ -20,7 +20,7 @@
 <div class="menu-item"><a href="https://jerryyangli.github.io/Reviewer.html">Service</a></div>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Professional Experience</h1>
+<h1>Work Experience</h1>
 </div>
 <ul>
 <li><p><b>Meta</b></p>
