--- a/Publications.html
+++ b/Publications.html
@@ -38,7 +38,7 @@
 &nbsp
 </p>
 <li>T. Shen, <b>Y. Li</b>, and J. M. F. Moura.
-	<br><a href="https://ieeexplore.ieee.org/document/10184813">Forecasting COVID-19 Dynamics: Clustering, Generalized Spatiotemporal Attention, and Impacts of Mobility and Geographic Proximity".
+	<br>"<a href="https://ieeexplore.ieee.org/document/10184813">Forecasting COVID-19 Dynamics: Clustering, Generalized Spatiotemporal Attention, and Impacts of Mobility and Geographic Proximity</a>".
 <br><i>IEEE International Conference on Data Engineering</i> (ICDE), 2023 (acceptance rate: 31%).
 <p>
 &nbsp
