--- a/Publications.html
+++ b/Publications.html
@@ -26,7 +26,7 @@
 <ol>
 <li>M. Lam, J. Johnson, W. Xiong, K. Maeng, U. Gupta, <b>Y. Li</b>, L. Lai, I. Leontiadis, M. Rhu, H. S. Lee, V. J. Reddi, G.-Y. Wei, D. Brooks, E. Suh.
 <br>"GPU-based Private Information Retrieval for On-Device Machine Learning Inference".
-<br>ACM International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS), 2024 (accepted with sheperding).
+<br>ACM International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS), 2024 (accepted with sheperding; acceptance rate: 16%).
 <p>
 &nbsp
 </p>
