--- a/Education.html
+++ b/Education.html
@@ -11,13 +11,13 @@
 <tbody><tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Menu</div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/index.html" class="current">About&nbsp;me</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Education.html">Education</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Work.html">Work Experience</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Publications.html">Publications</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Patents.html">Patents</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Teaching.html">Teaching</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Reviewer.html">Service</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/index.html" class="current">About&nbsp;me</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Education.html">Education</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Work.html">Work Experience</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Publications.html">Publications</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Patents.html">Patents</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Teaching.html">Teaching</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Reviewer.html">Service</a></div>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Education</h1>
@@ -26,7 +26,7 @@
 <li><p>Ph.D. in Electrical and Computer Engineering, <b>Carnegie Mellon University</b>, 2020</p>
 <p>Advisor: Prof. José M. F. Moura</p>
 <p>Ph.D. Committee: Prof. José M. F. Moura, Prof. Yuejie Chi, Prof. Carlee Joe-Wong, Prof. Jelena Kovačević, Dr. Di Wang</p>
-<p>Research areas: computer systems and architecture, machine learning, and their intersections</p>
+<p>Research areas: computer systems and architecture, machine learning, and their intersection</p>
 <p>
 &nbsp
 </p>
