--- a/Publications.html
+++ b/Publications.html
@@ -11,63 +11,75 @@
 <tbody><tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Menu</div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/index.html" class="current">About&nbsp;me</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Education.html">Education</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Work.html">Work Experience</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Publications.html">Publications</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Patents.html">Patents</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Teaching.html">Teaching</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Reviewer.html">Service</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/index.html" class="current">About&nbsp;me</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Education.html">Education</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Work.html">Work Experience</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Publications.html">Publications</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Patents.html">Patents</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Teaching.html">Teaching</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Reviewer.html">Service</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Publications </h1>
+<h1>Research Papers </h1>
 </div>
 <ol>
-<li>M. Lam, J. Johnson, W. Xiong, K. Maeng, U. Gupta, <b>Y. Li</b>, L. Lai, I. Leontiadis, M. Rhu, H. S. Lee, V. J. Reddi, G.-Y. Wei, D. Brooks, E. Suh.
+<li><p>Maximilian Lam, Jeff Johnson, Wenjie Xiong, Kiwan Maeng, Udit Gupta, <b>Yang Li</b>, Liangzhen Lai, Illias Leontiadis, Minsoo Rhu, Hsien-Hsin Lee, Vijay Janapa Reddi, Gu-Yeon Wei, David Brooks, and Edward Suh.
 <br>"GPU-based Private Information Retrieval for On-Device Machine Learning Inference".
-<br>ACM International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS), 2024 (acceptance rate: 16%).
+<br><i>ACM International Conference on Architectural Support for Programming Languages and Operating Systems</i> (ASPLOS), 2024 (acceptance rate: 16%).</p>
 <p>
 &nbsp
 </p>
-<li><p>D. Le, F. Seide, Y. Wang, <b>Y. Li</b>, K. Schubert, O. Kalinli, and M. L. Seltzer.
+<li><p><b>Yang Li*</b>, Liangzhen Lai*, Yuan Shangguan, Forrest N. Iandola, Ernie Chang, Yangyang Shi, and Vikas Chandra.
+	<br>"<a href="https://arxiv.org/pdf/2309.07988v1.pdf">Folding Attention: Memory and Power Optimization for On-Device Transformer-based Streaming Speech Recognition</a>".
+	<br><i>under review at IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2024.</p>
+<p>
+&nbsp
+</p>
+<li><p>Ernie Chang*, Pin-Jie Lin*, <b>Yang Li</b>, Sidd Srinivasan, Gael Le Lan, David Kant, Yangyang Shi, Forrest Iandola, and Vikas Chandra.
+	<br>"In-Context Prompt Editing for Conditional Audio Generation".
+	<br><i>under review at IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2024.</p>
+<p>
+&nbsp
+</p>
+<li><p>Duc Le, Frank Seide, Yuhao Wang, <b>Yang Li</b>, Kjell Schubert, Ozlem Kalinli, and Michael L. Seltzer.
 	<br>"<a href="https://arxiv.org/pdf/2211.00896.pdf">Factorized Blank Thresholding for Improved Runtime Efficiency of Neural Transducers</a>".
 	<br><i>IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2023.
 </p>
 <p>
 &nbsp
 </p>
-<li>T. Shen, <b>Y. Li</b>, and J. M. F. Moura.
-	<br>"<a href="https://ieeexplore.ieee.org/document/10184813">Forecasting COVID-19 Dynamics: Clustering, Generalized Spatiotemporal Attention, and Impacts of Mobility and Geographic Proximity</a>".
+<li>Tong Shen, <b>Yang Li</b>, and José M. F. Moura.
+	<br>"<a href="https://ieeexplore.ieee.org/document/10184813">Forecasting COVID-19 Dynamics: Clustering, Generalized Spatiotemporal Attention, and Impacts of Mobility and Geographic Proximity"</a>".
 <br><i>IEEE International Conference on Data Engineering</i> (ICDE), 2023 (acceptance rate: 31%).
+</p>
 <p>
 &nbsp
 </p>
-<li><p><b>Y. Li</b>, D. Wang, and J. M. F. Moura.
+<li><p><b>Y. Li</b>, D. Wang, and José M. F. Moura.
 	<br>"<a href="https://arxiv.org/pdf/2104.05914.pdf">GSA-Forecaster: Forecasting Graph-Based Time-Dependent Data with Graph Sequence Attention</a>".
-	<br>under review at TPAMI, 2021.
+	<br>preprint 2021; under review at IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI).
 </p>
 <p>
 &nbsp
 </p>
-<li><p><b>Y. Li</b> and J. M. F. Moura. 
-<br>"<a href="https://jerryyangli.github.io/publications/Forecaster_ECAI2020.pdf">Forecaster: A Graph Transformer for Forecasting Spatial and Time-Dependent Data</a>". 
-<br><i>European Conference on Artificial Intelligence</i> (ECAI), 2020 
-(acceptance rate: 25%).</p>
+<li><p><b>Y. Li</b> and José M. F. Moura. 
+<br>"<a href="https://andrew.cmu.edu/~yangli1/Forecaster_ECAI2020.pdf">Forecaster: A Graph Transformer for Forecasting Spatial and Time-Dependent Data</a>". 
+<br><i>European Conference on Artificial Intelligence</i> (ECAI), 2020 (acceptance rate: 25%).</p>
 </li>
 <p>
 &nbsp
 </p>
-<li><p><b>Y. Li</b>, C. R. Lefurgy, K. Rajamani, M. S. Allen-Ware, G. J. Silva, D. D. Heimsoth, S. Ghose, and O. Mutlu. 
-<br>"<a href="https://jerryyangli.github.io/publications/CapMaestro_HPCA2019.pdf">A Scalable Priority-Aware Approach to Managing Data Center Server Power</a>".
+<li><p><b>Yang Li</b>, Charles R. Lefurgy, Karthick Rajamani, Malcolm S. Allen-Ware, Guillermo J. Silva, Daniel D. Heimsoth, Saugata Ghose, Onur Mutlu. 
+<br>"<a href="https://andrew.cmu.edu/~yangli1/CapMaestro_HPCA2019.pdf">A Scalable Priority-Aware Approach to Managing Data Center Server Power</a>".
 <br><i>IEEE International Symposium on High-Performance Computer Architecture</i> (HPCA), 2019 
 (acceptance rate: 22%). 
-</p> <p>Technical report: "<a href="https://jerryyangli.github.io/publications/CapMaestro_Technical_Report.pdf">CapMaestro: exploiting power redundancy, data center-wide priorities, and stranded power for boosting data center performance</a>," in <i>IBM Research Report</i>, 2018. </p> 
+</p> <p>Technical report: "<a href="https://andrew.cmu.edu/~yangli1/CapMaestro_Technical_Report.pdf">CapMaestro: exploiting power redundancy, data center-wide priorities, and stranded power for boosting data center performance</a>," in <i>IBM Research Report</i>, 2018. </p> 
 </li>
 <p>
 &nbsp
  </p> 
-<li><p>C. Xu, K. Rajamani, A. Ferreira, W. Felter, J. Rubio, and <b>Y. Li</b>. 
+<li><p>Cong Xu, Karthick Rajamani, Alexandre Ferreira, Wesley Felter, Juan Rubio, and <b>Yang Li</b>. 
 <br>"<a href="https://dl.acm.org/citation.cfm?id=3190555">dCat: Dynamic Cache Management for Efficient, Performance-Sensitive Infrastructure-as-a-Service</a>". 
 <br><i>ACM European Conference on Computer Systems</i> (EuroSys), 2018
 (acceptance rate: 16%). </p>
@@ -75,36 +87,36 @@
 <p> 
 &nbsp
 </p> 
-<li><p><b>Y. Li</b>, S. Ghose, J. Choi, J. Sun, H. Wang, and O. Mutlu.<br>"<a href="https://jerryyangli.github.io/publications/UHMEM_Cluster2017.pdf">Utility-based Hybrid Memory Management</a>". <br><i>IEEE International Conference on Cluster Computing</i> (IEEE Cluster), 2017 <!Full paper with oral presentation,> (acceptance rate: 22%). </p>
+<li><p><b>Y. Li</b>, Saugata Ghose, Jongmoo Choi, Jin Sun, Hui Wang, and Onur Mutlu.<br>"<a href="https://andrew.cmu.edu/~yangli1/UHMEM_Cluster2017.pdf">Utility-based Hybrid Memory Management</a>". <br><i>IEEE International Conference on Cluster Computing</i> (IEEE Cluster), 2017 <!Full paper with oral presentation,> (acceptance rate: 22%). </p>
 </li>
 <p>
 &nbsp
  </p> 
-<li><p><b>Y. Li</b>, D. Wang, S. Ghose, J. Liu, S. Govindan, S. James, E. Peterson, J. Siegler, R. Ausavarungnirun, and O. Mutlu. <br>"<a href="https://jerryyangli.github.io/publications/SizeCap_HPCA2016.pdf">SizeCap: Efficiently Handling Power Surges for Fuel Cell Powered Data Centers</a>". <br><i>IEEE International Symposium on High-Performance Computer Architecture</i> (HPCA), 2016 (acceptance rate: 22%).  </p>
+<li><p><b>Yang Li</b>, Di Wang, Saugata Ghose, Jie Liu, Sriram Govindan, Sean James, Eric Peterson, John Siegler, Rachata Ausavarungnirun, and Onur Mutlu. <br>"<a href="https://andrew.cmu.edu/~yangli1/SizeCap_HPCA2016.pdf">SizeCap: Efficiently Handling Power Surges for Fuel Cell Powered Data Centers</a>". <br><i>IEEE International Symposium on High-Performance Computer Architecture</i> (HPCA), 2016 (acceptance rate: 22%).  </p>
 </li>
 <p>
 &nbsp
  </p> 
-<li><p>Z. Ye, T. Wang, and <b>Y. Li</b>. <br>"<a href="https://ieeexplore.ieee.org/document/6932458">Domain-Alternated Optimization for Passive Macromodeling</a>". <br><i>IEEE Transactions on Very Large Scale Integration Systems</i> (TVLSI), 2015. </p>
+<li><p>Zuochang Ye, Tianshi Wang, and <b>Yang Li</b>. <br>"<a href="https://ieeexplore.ieee.org/document/6932458">Domain-Alternated Optimization for Passive Macromodeling</a>". <br><i>IEEE Transactions on Very Large Scale Integration Systems</i> (TVLSI), 2015. </p>
 </li>
 <p>
 &nbsp
  </p>
-<li><p><b>Y. Li</b> and D. Z. Pan. <br>"<a href="https://jerryyangli.github.io/publications/3DIC_DAC2013.pdf">An Accurate Semi-Analytical Framework for Full-Chip TSV-induced Stress modeling</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2013 (acceptance rate: 23%).  </p>
+<li><p><b>Yang Li</b> and David Z. Pan. <br>"<a href="https://andrew.cmu.edu/~yangli1/3DIC_DAC2013.pdf">An Accurate Semi-Analytical Framework for Full-Chip TSV-induced Stress modeling</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2013 (acceptance rate: 23%).  </p>
 </li>
 <p> 
 &nbsp
 </p>
-<li><p>Z. Ye, B. Wu, S. Han, and <b>Y. Li</b>. <br>"<a href="https://ieeexplore.ieee.org/document/6560732">Time-Domain Segmentation based Massively Parallel Simulation for ADCs</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2013 (acceptance rate: 23%). </p>
+<li><p>Zuochang Ye, Bichen Wu, Song Han, and <b>Yang Li</b>. <br>"<a href="https://ieeexplore.ieee.org/document/6560732">Time-Domain Segmentation based Massively Parallel Simulation for ADCs</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2013 (acceptance rate: 23%). </p>
 </li>
 <p>
 &nbsp
  </p>
-<li><p>T. Wang, <b>Y. Li</b>, and Z. Ye. <br>"<a href="https://ieeexplore.ieee.org/document/6224200">Robust Passive Macro-Model Generation with
+<li><p>Tianshi Wang, <b>Yang Li</b>, and Zuochang Ye. <br>"<a href="https://ieeexplore.ieee.org/document/6224200">Robust Passive Macro-Model Generation with
 Local Compensation</a>". <br><i>IEEE Transactions on Microwave Theory and Techniques</i> (TMTT), 2012 <br>(see "<a href="https://ieeexplore.ieee.org/document/6384859">Corrections to ‘Robust Passive Macro-Model Generation with Local Compensation'</a>" in TMTT’13 for authorship information). </p> </li>
 <p>
 &nbsp
  </p>
-<li><p>Z. Ye, <b>Y. Li</b>, M. Gao, and Z. Yu. <br>"<a href="https://ieeexplore.ieee.org/document/5981975">A Novel Framework for Passive Macromodeling</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2011 (acceptance rate: 21%). </p>
+<li><p>Zuochang Ye, <b>Yang Li</b>, Mingzhi Gao, and Zhiping Yu. <br>"<a href="https://ieeexplore.ieee.org/document/5981975">A Novel Framework for Passive Macromodeling</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2011 (acceptance rate: 21%). </p>
 </li>
 </ul>
