--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 <h2>Research Topics</h2>
 <ul>
-<li><p>Cache, memory, and power management for cloud infrastructures</p></li>
-<li><p>Algorithm- and computer system-level optimizations for large language models (LLM)
-<li><p>Model-system co-design and privacy for on-device AI
-<li><p>Deep learning models for spatial- and time-dependent data</p></li>
+<li><p>Cloud infrastructure: cache, memory, and power management</p></li>
+<li><p>Large language models (LLM): algorithm- and computer system-level acceleration</p></li>
+<li><p>On-device AI: model-system co-design and privacy</p></li>
+<li><p>Machine learning models for spatial- and time-dependent data</p></li>
 </ul>
