--- a/Publications.html
+++ b/Publications.html
@@ -70,7 +70,7 @@
 <p>
 &nbsp
 </p>
-<li><p><b>Yang Li</b>, Charles R. Lefurgy, Karthick Rajamani, Malcolm S. Allen-Ware, Guillermo J. Silva, Daniel D. Heimsoth, Saugata Ghose, Onur Mutlu. 
+<li><p><b>Yang Li</b>, Charles R. Lefurgy, Karthick Rajamani, Malcolm S. Allen-Ware, Guillermo J. Silva, Daniel D. Heimsoth, Saugata Ghose, and Onur Mutlu. 
 <br>"<a href="https://andrew.cmu.edu/~yangli1/CapMaestro_HPCA2019.pdf">A Scalable Priority-Aware Approach to Managing Data Center Server Power</a>".
 <br><i>IEEE International Symposium on High-Performance Computer Architecture</i> (HPCA), 2019 
 (acceptance rate: 22%). 
