--- a/Education.html
+++ b/Education.html
@@ -41,7 +41,7 @@
 &nbsp
 </p>
 </li>
-<li><p>B.E. in Automation, <b>Tsinghua University</b>, 2011</p>
+<li><p>B.S. in Automation (computer engineering and control theory), <b>Tsinghua University</b>, 2011</p>
 <p>
 &nbsp
 </p>
