--- a/Education.html
+++ b/Education.html
@@ -23,7 +23,7 @@
 <h1>Education</h1>
 </div>
 <ul>
-<li><p>Ph.D. in Electrical and Computer Engineering, <b>Carnegie Mellon University</b>, 2020</p>
+<li><p><b>Carnegie Mellon University</b>, Ph.D. in Electrical and Computer Engineering, 2020</p>
 <p>Advisor: Prof. José M. F. Moura</p>
 <p>Ph.D. Committee: Prof. José M. F. Moura, Prof. Yuejie Chi, Prof. Carlee Joe-Wong, Prof. Jelena Kovačević, Dr. Di Wang</p>
 <p>Research areas: computer systems and architecture, machine learning, and their intersection</p>
@@ -31,17 +31,17 @@
 &nbsp
 </p>
 </li>
-<li><p>M.S. in Electrical and Computer Engineering, <b>Carnegie Mellon University</b>, 2020</p>
+<li><p><b>Carnegie Mellon University</b>, M.S. in Electrical and Computer Engineering, 2020</p>
 <p>
 &nbsp
 </p>
 </li>
-<li><p>M.S.E. in Electrical and Computer Engineering, <b>the University of Texas at Austin</b>, 2013</p>
+<li><p><b>The University of Texas at Austin</b>, M.S.E. in Electrical and Computer Engineering, 2013</p>
 <p>
 &nbsp
 </p>
 </li>
-<li><p>B.S. in Automation (computer engineering and control theory), <b>Tsinghua University</b>, 2011</p>
+<li><p><b>Tsinghua University</b>, B.S. in Automation (computer engineering and control theory), 2011</p>
 <p>
 &nbsp
 </p>
