--- a/Education.html
+++ b/Education.html
@@ -41,7 +41,7 @@
 &nbsp
 </p>
 </li>
-<li><p><b>Tsinghua University</b>, B.S. in Automation (computer engineering and control theory), 2011</p>
+<li><p><b>Tsinghua University</b>, B.S. in Automation (computer engineering, control, and AI), 2011</p>
 <p>
 &nbsp
 </p>
