--- a/Education.html
+++ b/Education.html
@@ -25,7 +25,7 @@
 <ul>
 <li><p><b>Carnegie Mellon University</b>, Ph.D. in Electrical and Computer Engineering, 2020</p>
 <p>Advisor: Prof. José M. F. Moura</p>
-<p>Ph.D. Committee: Prof. José M. F. Moura, Prof. Yuejie Chi, Prof. Carlee Joe-Wong, Prof. Jelena Kovačević, Dr. Di Wang</p>
+<p>Committee: Prof. José M. F. Moura, Prof. Yuejie Chi, Prof. Carlee Joe-Wong, Prof. Jelena Kovačević, Dr. Di Wang</p>
 <p>Research areas: computer systems and architecture, machine learning, and their intersection</p>
 <p>
 &nbsp
