--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p></p>
 <table class="imgtable"><tbody><tr><td>
 <img src="./YangLi_files/bio.jpg" alt="alt text" width="187px" height="199px"></a>&nbsp;</td>
-			<td align="left"><p>I am a senior research scientist at Meta. Before that, I was a researcher at Microsoft. I received PhD and MS degrees from Carnegie Mellon University (advisor: <a href="https://www.ece.cmu.edu/directory/bios/moura-jose.html">Prof. José M. F. Moura</a>, member of the National Academy of Engineering), an MSE degree from the University of Texas at Austin, and a BE degree from Tsinghua University. My research interests span computer architecture and systems, machine learning, and their intersection. I am a recipient of the IBM Patent Application Award.</p>
+			<td align="left"><p>I am a senior research scientist at Meta. Before that, I was a researcher at Microsoft. I received PhD and MS degrees from Carnegie Mellon University (advisor: <a href="https://www.ece.cmu.edu/directory/bios/moura-jose.html">Prof. José M. F. Moura</a>, member of the National Academy of Engineering), an MSE degree from the University of Texas at Austin, and a BE degree from Tsinghua University. I am a recipient of the IBM Patent Application Award.</p>
 
 </p><p>
 
@@ -36,10 +36,11 @@
 
 
 
-<h2>Research Topics</h2>
+<h2>Research Interests</h2>
+computer architecture and systems, machine learning, and their intersection, including:
 <ul>
 <li><p>Cloud infrastructure: cache, memory, and power management</p></li>
 <li><p>Large language models (LLM): algorithm- and computer system-level acceleration</p></li>
 <li><p>On-device AI: model-system co-design and privacy</p></li>
-<li><p>Machine learning models for spatial- and time-dependent data</p></li>
+<li><p>Machine learning models for spatiotemporal forecasting</p></li>
 </ul>
