--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 <h2>Research Interests</h2>
 computer architecture and systems, machine learning, and their intersection, including:
 <ul>
-<li><p>Cloud infrastructure: cache, memory, and power management</p></li>
-<li><p>Large language models (LLM): algorithm- and computer system-level acceleration</p></li>
-<li><p>On-device AI: model-system co-design and privacy</p></li>
-<li><p>Machine learning models for spatiotemporal forecasting</p></li>
+<li><p>cloud infrastructure: cache, memory, and power management</p></li>
+<li><p>large language models (LLM): algorithm- and computer system-level acceleration</p></li>
+<li><p>on-device AI: model-system co-design and privacy</p></li>
+<li><p>machine learning models for spatiotemporal forecasting</p></li>
 </ul>
