--- a/Publications.html
+++ b/Publications.html
@@ -25,7 +25,7 @@
 </div>
 <ol>
 <li><p>Maximilian Lam, Jeff Johnson, Wenjie Xiong, Kiwan Maeng, Udit Gupta, <b>Yang Li</b>, Liangzhen Lai, Illias Leontiadis, Minsoo Rhu, Hsien-Hsin Lee, Vijay Janapa Reddi, Gu-Yeon Wei, David Brooks, and Edward Suh.
-<br>"GPU-based Private Information Retrieval for On-Device Machine Learning Inference".
+<br>"<a href="https://arxiv.org/abs/2301.10904" GPU-based Private Information Retrieval for On-Device Machine Learning Inference</a>".
 <br><i>ACM International Conference on Architectural Support for Programming Languages and Operating Systems</i> (ASPLOS), 2024 (acceptance rate: 16%).</p>
 <p>
 &nbsp
