--- a/Publications.html
+++ b/Publications.html
@@ -37,7 +37,7 @@
 &nbsp
 </p>
 <li><p>Ernie Chang*, Pin-Jie Lin*, <b>Yang Li</b>, Sidd Srinivasan, Gael Le Lan, David Kant, Yangyang Shi, Forrest Iandola, and Vikas Chandra.
-	<br>"In-Context Prompt Editing for Conditional Audio Generation".
+	<br>"<a href="https://arxiv.org/abs/2311.00895">In-Context Prompt Editing for Conditional Audio Generation</a>".
 	<br><i>under review at IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2024.</p>
 <p>
 &nbsp
