--- a/Publications.html
+++ b/Publications.html
@@ -32,13 +32,13 @@
 </p>
 <li><p><b>Yang Li*</b>, Liangzhen Lai*, Yuan Shangguan, Forrest N. Iandola, Ernie Chang, Yangyang Shi, and Vikas Chandra.
 	<br>"<a href="https://arxiv.org/pdf/2309.07988v1.pdf">Folding Attention: Memory and Power Optimization for On-Device Transformer-based Streaming Speech Recognition</a>".
-	<br><i>under review at IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2024.</p>
+	<br><i>IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2024.</p>
 <p>
 &nbsp
 </p>
 <li><p>Ernie Chang*, Pin-Jie Lin*, <b>Yang Li</b>, Sidd Srinivasan, Gael Le Lan, David Kant, Yangyang Shi, Forrest Iandola, and Vikas Chandra.
 	<br>"<a href="https://arxiv.org/abs/2311.00895">In-Context Prompt Editing for Conditional Audio Generation</a>".
-	<br><i>under review at IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2024.</p>
+	<br><i>IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2024.</p>
 <p>
 &nbsp
 </p>
