--- a/Publications.html
+++ b/Publications.html
@@ -11,13 +11,13 @@
 <tbody><tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Menu</div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/index.html" class="current">About&nbsp;me</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Education.html">Education</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Work.html">Work Experience</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Publications.html">Publications</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Patents.html">Patents</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Teaching.html">Teaching</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Reviewer.html">Service</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/index.html" class="current">About&nbsp;me</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Education.html">Education</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Work.html">Work Experience</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Publications.html">Publications</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Patents.html">Patents</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Teaching.html">Teaching</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Reviewer.html">Service</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -26,11 +26,19 @@
 <ol>
 <li><p>Maximilian Lam, Jeff Johnson, Wenjie Xiong, Kiwan Maeng, Udit Gupta, <b>Yang Li</b>, Liangzhen Lai, Illias Leontiadis, Minsoo Rhu, Hsien-Hsin Lee, Vijay Janapa Reddi, Gu-Yeon Wei, David Brooks, and Edward Suh.
 	<br>"<a href="https://arxiv.org/abs/2301.10904">GPU-based Private Information Retrieval for On-Device Machine Learning Inference</a>".
-<br><i>ACM International Conference on Architectural Support for Programming Languages and Operating Systems</i> (ASPLOS), 2024 (acceptance rate: 16%).</p>
+<br><i>ACM International Conference on Architectural Support for Programming Languages and Operating Systems</i> (ASPLOS), 2024 (Spring round; acceptance rate: 16%).</p>
 <p>
 &nbsp
 </p>
-<li><p><b>Yang Li*</b>, Liangzhen Lai*, Yuan Shangguan, Forrest N. Iandola, Ernie Chang, Yangyang Shi, and Vikas Chandra.
+<li><p>Jamin Seo, <b>Yang Li</b>, Debabrata Mohapatra, Liangzhen Lai, Hyoukjun Kwon, Tushar Krishna. <br>"Memory Placement Policy Exploration for Dynamic Multi-model Multi-task ML Workloads”.<br> in review at a conference, 2024.</p>
+<p>
+&nbsp
+</p>
+<li><p><b>Yang Li</b>, Yuan Shangguan, Yuhao Wang, Liangzhen Lai, Yangyang Shi, and Vikas Chandra. <br>"Not All Weights Are Created Equal: Exploring Weight Sensitivity in Latency and Power Optimization for On-Device Speech Recognition”.<br> in review at a conference, 2024.</p>
+<p>
+&nbsp
+</p>
+<li><p><b>Yang Li*</b>, Liangzhen Lai*, Yuan Shangguan, Forrest N. Iandola, Zhaoheng Ni, Ernie Chang, Yangyang Shi, and Vikas Chandra.
 	<br>"<a href="https://arxiv.org/pdf/2309.07988v1.pdf">Folding Attention: Memory and Power Optimization for On-Device Transformer-based Streaming Speech Recognition</a>".
 	<br><i>IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2024.</p>
 <p>
@@ -42,6 +50,14 @@
 <p>
 &nbsp
 </p>
+<li><p><b>Y. Li</b>, D. Wang, and José M. F. Moura.
+        <br>"<a href="https://arxiv.org/pdf/2104.05914.pdf">GSA-Forecaster: Forecasting Graph-Based Time-Dependent Data with Graph Sequence Attention</a>".
+        <br>preprint arXiv:2104.05914, in review at IEEE International Conference on Data Engineering (ICDE), 2024.
+</p>
+<p>
+&nbsp
+</p>
+</p>
 <li><p>Duc Le, Frank Seide, Yuhao Wang, <b>Yang Li</b>, Kjell Schubert, Ozlem Kalinli, and Michael L. Seltzer.
 	<br>"<a href="https://arxiv.org/pdf/2211.00896.pdf">Factorized Blank Thresholding for Improved Runtime Efficiency of Neural Transducers</a>".
 	<br><i>IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2023.
@@ -50,15 +66,8 @@
 &nbsp
 </p>
 <li>Tong Shen, <b>Yang Li</b>, and José M. F. Moura.
-	<br>"<a href="https://ieeexplore.ieee.org/document/10184813">Forecasting COVID-19 Dynamics: Clustering, Generalized Spatiotemporal Attention, and Impacts of Mobility and Geographic Proximity"</a>".
+	<br>"<a href="https://ieeexplore.ieee.org/document/10184813">Forecasting COVID-19 Dynamics: Clustering, Generalized Spatiotemporal Attention, and Impacts of Mobility and Geographic Proximity</a>".
 <br><i>IEEE International Conference on Data Engineering</i> (ICDE), 2023 (acceptance rate: 31%).
-</p>
-<p>
-&nbsp
-</p>
-<li><p><b>Y. Li</b>, D. Wang, and José M. F. Moura.
-	<br>"<a href="https://arxiv.org/pdf/2104.05914.pdf">GSA-Forecaster: Forecasting Graph-Based Time-Dependent Data with Graph Sequence Attention</a>".
-	<br>preprint 2021; under review at IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI).
 </p>
 <p>
 &nbsp
