--- a/Reviewer.html
+++ b/Reviewer.html
@@ -11,18 +11,26 @@
 <tbody><tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Menu</div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/index.html" class="current">About&nbsp;me</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Education.html">Education</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Work.html">Work Experience</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Publications.html">Publications</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Patents.html">Patents</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Teaching.html">Teaching</a></div>
-<div class="menu-item"><a href="https://jerryyangli.github.io/Reviewer.html">Service</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/index.html" class="current">About&nbsp;me</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Education.html">Education</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Work.html">Work Experience</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Publications.html">Publications</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Patents.html">Patents</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Teaching.html">Teaching</a></div>
+<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Reviewer.html">Service</a></div>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Service</h1>
 </div>
-<p>I serve as a reviewer for the following journals:</p>
+<p>Technical Program Committee Member:</p>
+<p>
+</p>
+<ul>
+<li><p>The IEEE/ACM Design Automation Conference (DAC), 2024</p>
+</li>
+</ul>
+
+<p>Reviewer for the following journals:</p>
 <p>
 </p>
 <ul>
