--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
 <p></p>
 <table class="imgtable"><tbody><tr><td>
 <img src="./YangLi_files/bio.jpg" alt="alt text" width="187px" height="199px"></a>&nbsp;</td>
-			<td align="left"><p>I am a senior research scientist at Meta. Before that, I was a researcher at Microsoft. I received PhD and MS degrees from Carnegie Mellon University (advisor: <a href="https://www.ece.cmu.edu/directory/bios/moura-jose.html">Prof. José M. F. Moura</a>, member of the National Academy of Engineering), an MSE degree from the University of Texas at Austin, and a BE degree from Tsinghua University. I am a recipient of the IBM Patent Application Award.</p>
+			<td align="left"><p>I am an assistant professor at Iowa State University. Before that, I was a senior research scientist at Meta and a researcher at Microsoft. I received PhD and MS degrees from Carnegie Mellon University (advisor: <a href="https://www.ece.cmu.edu/directory/bios/moura-jose.html">Prof. José M. F. Moura</a>, member of the National Academy of Engineering), an MSE degree from the University of Texas at Austin, and a BE degree from Tsinghua University. I am a recipient of the IBM Patent Application Award.</p>
 
 </p><p>
 
+<p> <b>Update on March 2024: I am looking for new Ph.D. students to join my group.</b>
+</p>
 
 </p><p>
-<p>E-mail: &nbsp;jerryyangli@gmail.com</p>
+<p>E-mail: &nbsp;yangli1@iastate.edu</p>
 </p><p>
 </td></tr></tbody></table>
 
@@ -40,7 +42,7 @@
 computer architecture and systems, machine learning, and their intersection, including:
 <ul>
 <li><p>cloud infrastructure: cache, memory, and power management</p></li>
-<li><p>large language models (LLM): algorithm- and computer system-level acceleration</p></li>
+<li><p>large language models (LLM): algorithm- and computer system-level acceleration, code generation</p></li>
 <li><p>on-device AI: model-system co-design and privacy</p></li>
 <li><p>machine learning models for spatiotemporal forecasting</p></li>
 </ul>
