--- a/Publications.html
+++ b/Publications.html
@@ -34,7 +34,7 @@
 <p>
 &nbsp
 </p>
-<li><p><b>Yang Li</b>, Yuan Shangguan, Yuhao Wang, Liangzhen Lai, Yangyang Shi, and Vikas Chandra. <br>"Not All Weights Are Created Equal: Exploring Weight Sensitivity in Latency and Power Optimization for On-Device Speech Recognition”.<br> in review at a conference, 2024.</p>
+<li><p><b>Yang Li</b>, Yuan Shangguan, Yuhao Wang, Liangzhen Lai, Yangyang Shi, and Vikas Chandra. <br>"<a href="https://arxiv.org/abs/2402.13076">Not All Weights Are Created Equal: Exploring Weight Sensitivity in Latency and Power Optimization for On-Device Speech Recognition</a>”.<br> in review at a conference, 2024.</p>
 <p>
 &nbsp
 </p>
