--- a/Publications.html
+++ b/Publications.html
@@ -11,13 +11,13 @@
 <tbody><tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Menu</div>
-<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/index.html" class="current">About&nbsp;me</a></div>
-<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Education.html">Education</a></div>
-<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Work.html">Work Experience</a></div>
-<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Publications.html">Publications</a></div>
-<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Patents.html">Patents</a></div>
-<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Teaching.html">Teaching</a></div>
-<div class="menu-item"><a href="https://www.andrew.cmu.edu/~yangli1/Reviewer.html">Service</a></div>
+<div class="menu-item"><a href="https://jerryyangli.github.io/index.html" class="current">About&nbsp;me</a></div>
+<div class="menu-item"><a href="https://jerryyangli.github.io/Education.html">Education</a></div>
+<div class="menu-item"><a href="https://jerryyangli.github.io/Work.html">Work Experience</a></div>
+<div class="menu-item"><a href="https://jerryyangli.github.io/Publications.html">Publications</a></div>
+<div class="menu-item"><a href="https://jerryyangli.github.io/Patents.html">Patents</a></div>
+<div class="menu-item"><a href="https://jerryyangli.github.io/Teaching.html">Teaching</a></div>
+<div class="menu-item"><a href="https://jerryyangli.github.io/Reviewer.html">Service</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -73,14 +73,14 @@
 &nbsp
 </p>
 <li><p><b>Y. Li</b> and José M. F. Moura. 
-<br>"<a href="https://andrew.cmu.edu/~yangli1/Forecaster_ECAI2020.pdf">Forecaster: A Graph Transformer for Forecasting Spatial and Time-Dependent Data</a>". 
+<br>"<a href="https://jerryyangli.github.io/Forecaster_ECAI2020.pdf">Forecaster: A Graph Transformer for Forecasting Spatial and Time-Dependent Data</a>". 
 <br><i>European Conference on Artificial Intelligence</i> (ECAI), 2020 (acceptance rate: 25%).</p>
 </li>
 <p>
 &nbsp
 </p>
 <li><p><b>Yang Li</b>, Charles R. Lefurgy, Karthick Rajamani, Malcolm S. Allen-Ware, Guillermo J. Silva, Daniel D. Heimsoth, Saugata Ghose, and Onur Mutlu. 
-<br>"<a href="https://andrew.cmu.edu/~yangli1/CapMaestro_HPCA2019.pdf">A Scalable Priority-Aware Approach to Managing Data Center Server Power</a>".
+<br>"<a href="https://jerryyangli.github.io/CapMaestro_HPCA2019.pdf">A Scalable Priority-Aware Approach to Managing Data Center Server Power</a>".
 <br><i>IEEE International Symposium on High-Performance Computer Architecture</i> (HPCA), 2019 
 (acceptance rate: 22%). 
 </p> <p>Technical report: "<a href="https://andrew.cmu.edu/~yangli1/CapMaestro_Technical_Report.pdf">CapMaestro: exploiting power redundancy, data center-wide priorities, and stranded power for boosting data center performance</a>," in <i>IBM Research Report</i>, 2018. </p> 
@@ -96,12 +96,12 @@
 <p> 
 &nbsp
 </p> 
-<li><p><b>Y. Li</b>, Saugata Ghose, Jongmoo Choi, Jin Sun, Hui Wang, and Onur Mutlu.<br>"<a href="https://andrew.cmu.edu/~yangli1/UHMEM_Cluster2017.pdf">Utility-based Hybrid Memory Management</a>". <br><i>IEEE International Conference on Cluster Computing</i> (IEEE Cluster), 2017 <!Full paper with oral presentation,> (acceptance rate: 22%). </p>
+<li><p><b>Y. Li</b>, Saugata Ghose, Jongmoo Choi, Jin Sun, Hui Wang, and Onur Mutlu.<br>"<a href="https://jerryyangli.github.io/UHMEM_Cluster2017.pdf">Utility-based Hybrid Memory Management</a>". <br><i>IEEE International Conference on Cluster Computing</i> (IEEE Cluster), 2017 <!Full paper with oral presentation,> (acceptance rate: 22%). </p>
 </li>
 <p>
 &nbsp
  </p> 
-<li><p><b>Yang Li</b>, Di Wang, Saugata Ghose, Jie Liu, Sriram Govindan, Sean James, Eric Peterson, John Siegler, Rachata Ausavarungnirun, and Onur Mutlu. <br>"<a href="https://andrew.cmu.edu/~yangli1/SizeCap_HPCA2016.pdf">SizeCap: Efficiently Handling Power Surges for Fuel Cell Powered Data Centers</a>". <br><i>IEEE International Symposium on High-Performance Computer Architecture</i> (HPCA), 2016 (acceptance rate: 22%).  </p>
+<li><p><b>Yang Li</b>, Di Wang, Saugata Ghose, Jie Liu, Sriram Govindan, Sean James, Eric Peterson, John Siegler, Rachata Ausavarungnirun, and Onur Mutlu. <br>"<a href="https://jerryyangli.github.io/SizeCap_HPCA2016.pdf">SizeCap: Efficiently Handling Power Surges for Fuel Cell Powered Data Centers</a>". <br><i>IEEE International Symposium on High-Performance Computer Architecture</i> (HPCA), 2016 (acceptance rate: 22%).  </p>
 </li>
 <p>
 &nbsp
@@ -111,7 +111,7 @@
 <p>
 &nbsp
  </p>
-<li><p><b>Yang Li</b> and David Z. Pan. <br>"<a href="https://andrew.cmu.edu/~yangli1/3DIC_DAC2013.pdf">An Accurate Semi-Analytical Framework for Full-Chip TSV-induced Stress modeling</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2013 (acceptance rate: 23%).  </p>
+<li><p><b>Yang Li</b> and David Z. Pan. <br>"<a href="https://jerryyangli.github.io/3DIC_DAC2013.pdf">An Accurate Semi-Analytical Framework for Full-Chip TSV-induced Stress modeling</a>". <br><i>IEEE/ACM Design Automation Conference</i> (DAC), 2013 (acceptance rate: 23%).  </p>
 </li>
 <p> 
 &nbsp
