--- a/Publications.html
+++ b/Publications.html
@@ -52,7 +52,7 @@
 </p>
 <li><p><b>Y. Li</b>, D. Wang, and José M. F. Moura.
         <br>"<a href="https://arxiv.org/pdf/2104.05914.pdf">GSA-Forecaster: Forecasting Graph-Based Time-Dependent Data with Graph Sequence Attention</a>".
-        <br>preprint arXiv:2104.05914, in review at IEEE International Conference on Data Engineering (ICDE), 2024.
+        <br>in review at ACM Transactions on Knowledge Discovery from Data (TKDD), 2024.
 </p>
 <p>
 &nbsp
