--- a/Publications.html
+++ b/Publications.html
@@ -24,6 +24,12 @@
 <h1>Research Papers </h1>
 </div>
 <ol>
+<li><p><b>Yang Li</b>, Changsheng Zhao, Hyungtak Lee, Ernie Chang, Yangyang Shi, Vikas Chandra.
+        <br>"<a href="https://arxiv.org/abs/2405.15877">Basis Selection: Low-Rank Decomposition of Pretrained Large Language Models for Target Applications</a>".
+<br><i>in review at a conference, 2024.</p>
+<p>
+&nbsp
+</p>
 <li><p>Maximilian Lam, Jeff Johnson, Wenjie Xiong, Kiwan Maeng, Udit Gupta, <b>Yang Li</b>, Liangzhen Lai, Illias Leontiadis, Minsoo Rhu, Hsien-Hsin Lee, Vijay Janapa Reddi, Gu-Yeon Wei, David Brooks, and Edward Suh.
 	<br>"<a href="https://arxiv.org/abs/2301.10904">GPU-based Private Information Retrieval for On-Device Machine Learning Inference</a>".
 <br><i>ACM International Conference on Architectural Support for Programming Languages and Operating Systems</i> (ASPLOS), 2024 (Spring round; acceptance rate: 16%).</p>
