--- a/Publications.html
+++ b/Publications.html
@@ -26,7 +26,7 @@
 <ol>
 <li><p><b>Yang Li</b>, Changsheng Zhao, Hyungtak Lee, Ernie Chang, Yangyang Shi, Vikas Chandra.
         <br>"<a href="https://arxiv.org/abs/2405.15877">Basis Selection: Low-Rank Decomposition of Pretrained Large Language Models for Target Applications</a>".
-<br><i>in review at a conference, 2024.</p>
+<br>in review at a conference, 2024.</p>
 <p>
 &nbsp
 </p>
