--- a/Reviewer.html
+++ b/Reviewer.html
@@ -22,13 +22,15 @@
 <div id="toptitle">
 <h1>Service</h1>
 </div>
-<p>Technical Program Committee Member:</p>
+<p>Program Committee Member:</p>
 <p>
 </p>
 <ul>
 <li><p>The IEEE/ACM Design Automation Conference (DAC), 2024</p>
 </li>
+<li><p>Conference on Neural Information Processing Systems (NeurIPS), 2024</p>
 </ul>
+
 
 <p>Reviewer for the following journals:</p>
 <p>
