--- a/Teaching.html
+++ b/Teaching.html
@@ -31,6 +31,15 @@
 <p>
 &nbsp
 </p>
+<li><p>Instructor, Iowa State University:</p>
+<p>COMS 3210 <b>Introduction to Computer Architecture and Machine-Level Programming</b>, Spring 2024.
+
+<p>Spring 2024 instructor's evaluation: 4.04 out of 5.0 </p>
+</li>
+<p> </p>
+<p>
+&nbsp
+</p>
 <li><p>Teaching Assistant, Carnegie Mellon University:</p> 
 <p>18-202 <b>Mathematical Foundations for Electrical Engineering</b>, Spring 2017 and Spring 2018. 
 
