--- a/Teaching.html
+++ b/Teaching.html
@@ -26,7 +26,7 @@
 <li><p>Instructor, Iowa State University:</p>
 <p>COMS 3210 <b>Introduction to Computer Architecture and Machine-Level Programming</b>, Spring 2024.
 
-<p>Spring 2024 instructor's evaluation: 4.04 out of 5.0 </p>
+<p>Spring 2024 teaching score: 4.04 out of 5.0 </p>
 </li>
 <p> </p>
 <p>
