--- a/Publications.html
+++ b/Publications.html
@@ -30,21 +30,19 @@
 <p>
 &nbsp
 </p>
+<li><p><b>Yang Li*</b>, Yuan Shangguan*, Yuhao Wang, Liangzhen Lai, Ernie Chang, Changsheng Zhao, Yangyang Shi, and Vikas Chandra. <br>"<a href="https://arxiv.org/abs/2402.13076">Not All Weights Are Created Equal: Exploring Weight Sensitivity in Latency and Power Optimization for On-Device Speech Recognition</a>”.<br> in review at a conference, 2024.</p>
+<p>
+&nbsp
+</p>
 <li><p>Ernie Chang, Matteo Paltenghi, <b>Yang Li</b>, Pin-Jie Lin, Changsheng Zhao, Patrick Huber, Zechun Liu, Rastislav Rabatin, Yangyang Shi, Vikas Chandra.
-        <br>"<a Scaling Parameter-Constrained Language Models with Quality Data</a>".
-<br><i>Conference on Empirical Methods in Natural Language Processing (EMNLP Industry Track)</i>, 2024.</p>
+        <br>"Scaling Parameter-Constrained Language Models with Quality Data</a>".
+<br><i>Conference on Empirical Methods in Natural Language Processing</i> (EMNLP Industry Track), 2024.</p>
 <p>
 &nbsp
 </p>
 <li><p>Ernie Chang, Pin-Jie Lin, <b>Yang Li</b>, Changsheng Zhao, Daeil Kim, Rastislav Rabatin, Zechun Liu, Yangyang Shi, Vikas Chandra.
         <br>"<a href="https://arxiv.org/abs/2409.14705">Target-Aware Language Modeling via Granular Data Sampling</a>".
 <br><i>Conference on Empirical Methods in Natural Language Processing (EMNLP)</i>, 2024.</p>
-<p>
-&nbsp
-</p>
-<li><p><b>Yang Li</b>, Changsheng Zhao, Hyungtak Lee, Ernie Chang, Yangyang Shi, Vikas Chandra.
-        <br>"<a href="https://arxiv.org/abs/2405.15877">Basis Selection: Low-Rank Decomposition of Pretrained Large Language Models for Target Applications</a>".
-<br>in review at a conference, 2024.</p>
 <p>
 &nbsp
 </p>
