--- a/Publications.html
+++ b/Publications.html
@@ -42,7 +42,7 @@
 </p>
 <li><p>Ernie Chang, Pin-Jie Lin, <b>Yang Li</b>, Changsheng Zhao, Daeil Kim, Rastislav Rabatin, Zechun Liu, Yangyang Shi, Vikas Chandra.
         <br>"<a href="https://arxiv.org/abs/2409.14705">Target-Aware Language Modeling via Granular Data Sampling</a>".
-<br><i>Conference on Empirical Methods in Natural Language Processing (EMNLP)</i>, 2024.</p>
+<br><i>Conference on Empirical Methods in Natural Language Processing</i> (EMNLP), 2024.</p>
 <p>
 &nbsp
 </p>
