--- a/Teaching.html
+++ b/Teaching.html
@@ -24,7 +24,14 @@
 </div>
 <ul>
 <li><p>Instructor, Iowa State University:</p>
-<p>COMS 3210 <b>Introduction to Computer Architecture and Machine-Level Programming</b>, Spring 2024.
+<p>COMS 6730-2 (Fall 2024) <b>Advanced Topics in Machine Learning</b>.
+</li>
+<p> </p>
+<p>
+&nbsp
+</p>
+<li><p>Instructor, Iowa State University:</p>
+<p>COM S 321 (Spring 2024) <b>Introduction to Computer Architecture and Machine-Level Programming</b>.
 
 <p>Spring 2024 teaching score: 4.04 out of 5.0 </p>
 </li>
