--- a/Publications.html
+++ b/Publications.html
@@ -36,7 +36,7 @@
 </p>
 <li><p>Ernie Chang, Matteo Paltenghi, <b>Yang Li</b>, Pin-Jie Lin, Changsheng Zhao, Patrick Huber, Zechun Liu, Rastislav Rabatin, Yangyang Shi, Vikas Chandra.
         <br>"Scaling Parameter-Constrained Language Models with Quality Data</a>".
-<br><i>Conference on Empirical Methods in Natural Language Processing</i> (EMNLP Industry Track), 2024.</p>
+<br><i>Conference on Empirical Methods in Natural Language Processing</i> (EMNLP) Industry Track, 2024.</p>
 <p>
 &nbsp
 </p>
