--- a/Teaching.html
+++ b/Teaching.html
@@ -26,6 +26,7 @@
 <li><p>Instructor, Iowa State University:</p>
 <p>COMS 6730-2 (Fall 2024) <b>Advanced Topics in Machine Learning</b>.
 </p>
+<p>Fall 2024 teaching score: 4.75 out of 5.0 </p>
 </li>
 <p> </p>
 <p>
