--- a/Teaching.html
+++ b/Teaching.html
@@ -26,16 +26,17 @@
 <li><p>Instructor, Iowa State University:</p>
 <p>COMS 6730-2 (Fall 2024) <b>Advanced Topics in Machine Learning</b>.
 </p>
-<p>Fall 2024 teaching score: 4.75 out of 5.0 </p>
+<p>Teaching score: 4.75 out of 5.0 (Fall 2024) </p>
 </li>
 <p> </p>
 <p>
 &nbsp
 </p>
 <li><p>Instructor, Iowa State University:</p>
-<p>COM S 321-1 (Spring 2024) <b>Introduction to Computer Architecture and Machine-Level Programming</b>.
+<p>COM S 321-1 (Spring 2024), COMS 3210-3 (Spring 2025)
 </p>
-<p>Spring 2024 teaching score: 4.04 out of 5.0 </p>
+<p><b>Introduction to Computer Architecture and Machine-Level Programming</b></p>
+<p>Teaching score: 4.04 out of 5.0 (Spring 2024) </p>
 </li>
 <p> </p>
 <p>
