--- a/Publications.html
+++ b/Publications.html
@@ -30,7 +30,7 @@
 <p>
 &nbsp
 </p>
-<li><p><b>Yang Li*</b>, Yuan Shangguan*, Yuhao Wang, Liangzhen Lai, Ernie Chang, Changsheng Zhao, Yangyang Shi, and Vikas Chandra. <br>"<a href="https://arxiv.org/abs/2402.13076">Not All Weights Are Created Equal: Exploring Weight Sensitivity in Latency and Power Optimization for On-Device Speech Recognition</a>”.<br> in review at a conference, 2024.</p>
+<li><p><b>Yang Li*</b>, Yuan Shangguan*, Yuhao Wang, Liangzhen Lai, Ernie Chang, Changsheng Zhao, Yangyang Shi, and Vikas Chandra. <br>"Breaking Down Power Barriers in On-Device Streaming ASR: Insights and Solutions</a>”.<br><i>Annual Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics</i>（NAACL) Industry Track, 2025 (with oral presentation).</p>
 <p>
 &nbsp
 </p>
