--- a/Publications.html
+++ b/Publications.html
@@ -30,7 +30,7 @@
 <p>
 &nbsp
 </p>
-<li><p><b>Yang Li*</b>, Yuan Shangguan*, Yuhao Wang, Liangzhen Lai, Ernie Chang, Changsheng Zhao, Yangyang Shi, and Vikas Chandra. <br>"Breaking Down Power Barriers in On-Device Streaming ASR: Insights and Solutions</a>”.<br><i>Annual Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics</i>（NAACL) Industry Track, 2025 (with oral presentation).</p>
+<li><p><b>Yang Li*</b>, Yuan Shangguan*, Yuhao Wang, Liangzhen Lai, Ernie Chang, Changsheng Zhao, Yangyang Shi, and Vikas Chandra. <br>"Breaking Down Power Barriers in On-Device Streaming ASR: Insights and Solutions</a>”.<br><i>Annual Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics</i> (NAACL) Industry Track, 2025 (with oral presentation).</p>
 <p>
 &nbsp
 </p>
