--- a/Publications.html
+++ b/Publications.html
@@ -30,13 +30,13 @@
 <p>
 &nbsp
 </p>
-<li><p><b>Yang Li*</b>, Yuan Shangguan*, Yuhao Wang, Liangzhen Lai, Ernie Chang, Changsheng Zhao, Yangyang Shi, and Vikas Chandra. <br>"Breaking Down Power Barriers in On-Device Streaming ASR: Insights and Solutions</a>”.<br><i>Annual Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics</i> (NAACL) Industry Track, 2025 (with oral presentation).</p>
+<li><p><b>Yang Li*</b>, Yuan Shangguan*, Yuhao Wang, Liangzhen Lai, Ernie Chang, Changsheng Zhao, Yangyang Shi, and Vikas Chandra. <br>"Breaking Down Power Barriers in On-Device Streaming ASR: Insights and Solutions</a>”.<br><i>Annual Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics: Industry Track</i> (NAACL), 2025 (selected for oral presentation).</p>
 <p>
 &nbsp
 </p>
 <li><p>Ernie Chang, Matteo Paltenghi, <b>Yang Li</b>, Pin-Jie Lin, Changsheng Zhao, Patrick Huber, Zechun Liu, Rastislav Rabatin, Yangyang Shi, Vikas Chandra.
         <br>"Scaling Parameter-Constrained Language Models with Quality Data</a>".
-<br><i>Conference on Empirical Methods in Natural Language Processing</i> (EMNLP) Industry Track, 2024.</p>
+<br><i>Conference on Empirical Methods in Natural Language Processing: Industry Track</i> (EMNLP), 2024.</p>
 <p>
 &nbsp
 </p>
