--- a/Publications.html
+++ b/Publications.html
@@ -34,6 +34,13 @@
 <p>
 &nbsp
 </p>
+<li><p><b>Y. Li</b>, D. Wang, and José M. F. Moura.
+        <br>"<a href="https://arxiv.org/pdf/2104.05914.pdf">GSA-Forecaster: Forecasting Graph-Based Time-Dependent Data with Graph Sequence Attention</a>".
+        <br>ACM Transactions on Knowledge Discovery from Data (TKDD), 2025.
+</p>
+<p>
+&nbsp
+</p>
 <li><p>Ernie Chang, Matteo Paltenghi, <b>Yang Li</b>, Pin-Jie Lin, Changsheng Zhao, Patrick Huber, Zechun Liu, Rastislav Rabatin, Yangyang Shi, Vikas Chandra.
         <br>"Scaling Parameter-Constrained Language Models with Quality Data</a>".
 <br><i>Proceedings of Conference on Empirical Methods in Natural Language Processing - Industry Track</i> (EMNLP), 2024.</p>
@@ -67,14 +74,6 @@
 	<br><i>Proceedings of IEEE International Conference on Acoustics, Speech and Signal Processing</i> (ICASSP), 2024.</p>
 <p>
 &nbsp
-</p>
-<li><p><b>Y. Li</b>, D. Wang, and José M. F. Moura.
-        <br>"<a href="https://arxiv.org/pdf/2104.05914.pdf">GSA-Forecaster: Forecasting Graph-Based Time-Dependent Data with Graph Sequence Attention</a>".
-        <br>in review at ACM Transactions on Knowledge Discovery from Data (TKDD), 2024.
-</p>
-<p>
-&nbsp
-</p>
 </p>
 <li><p>Duc Le, Frank Seide, Yuhao Wang, <b>Yang Li</b>, Kjell Schubert, Ozlem Kalinli, and Michael L. Seltzer.
 	<br>"<a href="https://arxiv.org/pdf/2211.00896.pdf">Factorized Blank Thresholding for Improved Runtime Efficiency of Neural Transducers</a>".
